--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -57,7 +57,7 @@ blocks:
 
   - name: Run tests
     task:
-      # This block runs two jobs in parallel and they both share common
+      # Tis block runs two jobs in parallel and they both share common
       # setup steps. We can group them in a prologue.
       # See https://docs.semaphoreci.com/article/50-pipeline-yaml#prologue
       prologue:
